--- a/flux/nginx-test.yaml
+++ b/flux/nginx-test.yaml
@@ -32,3 +32,11 @@ spec:
         ports:
         - containerPort: 80
           name: http
+        volumeMounts:
+        - name: volume-nginx-conf
+          mountPath: /etc/nginx/conf.d/default.conf
+          subPath: nginx.conf
+      volumes:
+        - name: volume-nginx-conf
+          configMap:
+            name: nginx-conf
